# amazonscraper

./: CMakeLists.txt  main.cpp  main.hpp  parse.cpp  parse.hpp  vcpkg.json
